# matterport

./: .env.example  .gitignore  PHASE_5_TYPE_IMPORT_REMEDIATION.md  README.md  package-lock.json  package.json
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  main.py  memory_repository.py  mock_data.py  models.py  repository.py  sanity_repository.py  settings.py  workflow_readiness.py
apps/api/app/ai/: __init__.py  errors.py  registry.py  router.py  schemas.py
apps/api/app/ai/providers/: __init__.py  base.py  kimi.py  minimax.py  openai.py  qwen.py  shared.py
apps/api/app/routers/: ai.py  annotations.py  export.py  health.py  integrations.py  projects.py  providers.py  spaces.py  workflows.py
apps/api/scripts/: seed_sanity_from_mock.py
apps/api/tests/: conftest.py  test_ai.py  test_app.py  test_export.py
apps/web/: eslint.config.mjs  next.config.mjs  package.json  playwright.config.ts  sanity.cli.ts  sanity.config.ts  tsconfig.json  vitest.config.mts  vitest.config.ts
apps/web/e2e/: platform-smoke.spec.ts  space-mobile.spec.ts  vision-tag-placement.spec.ts
apps/web/scripts/: delete-sanity-mock-objects.mjs  ensure-next-cache-life-types.mjs  seed-sanity.mjs
apps/web/tests/: api-export-routes.spec.ts  api-guard.spec.ts  api-objects-route.spec.ts  api-workflows-route.spec.ts  command-bar.spec.tsx  context-panel.spec.tsx  matterport.spec.ts  (+5 more)
docs/: MODE_UI_PLAN.md
docs/plans/: 2026-03-07-matterport-ai-platform-design.md
docs/setup/: matterport-access.md
scripts/: op-audit-login-metadata.mjs  op-audit-login-metadata.test.mjs
(+82 files in other folders)
